--- a/less/style.less
+++ b/less/style.less
@@ -12,11 +12,12 @@
 }
 body
 {
-  margin:0;
-  padding:0;
-  outline:none;
-  overflow-x:hidden;
-  background: #F1F1F1;
+  background: #f1f1f1 none repeat scroll 0 0;
+  margin: 0;
+  outline: medium none;
+  overflow-x: hidden;
+  padding: 20px;
+  position: relative;
 }
 
 a
@@ -36,19 +37,87 @@ ul{
   list-style-type:none;
 }
 .contentbox{
-
-  color:red;
+  background: #fff none repeat scroll 0 0 padding-box content-box;
+  overflow: hidden;
+  padding-left: 360px;
 }
+.topbox{
+  background: #f1f1f1 none repeat scroll 0 0;
+  height: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.bottombox{
+  background: #f1f1f1 none repeat scroll 0 0;
+  height: 20px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+//.rightbox{
+//  background: #f1f1f1 none repeat scroll 0 0;
+//  height: 20px;
+//  position: fixed;
+//  top: 0;
+//  width: 100%;
+//}
+//.leftbox{
+//  background: #f1f1f1 none repeat scroll 0 0;
+//  height: 20px;
+//  position: fixed;
+//  top: 0;
+//  width: 100%;
+//}
+
+
 .leftbar{
-color:red;
+  background: #fff none repeat scroll 0 0;
+  bottom: 20px;
+  left: 20px;
+  overflow: auto;
+  position: fixed;
+  top: 20px;
+  width: 360px;
 }
-.displaybar{
+.logo{
+  color:red;
+  img{
+    color:red;
+  }
+}
 
+.displaybar{
   color:red;
 }
 
 
+.nav-bar{
+  color:red;
+  ul{
+    color:red;
+    li{
+      color:red;
+      a{
+        color:red;
+      }
+    }
+  }
+}
 
+.social-icons{
+  color:red;
+  a{
+    color:red;
+  }
+}
+.copyright{
+  color:red;
+  a{
+    color:red;
+  }
+}
 
 
 @media (min-width: 0px) {
