--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,8 +1,12 @@
 // Mixins
 // --------------------------------------------------
 
-.block(){
+.block{
   float: left;
+  width: 100%;
+}
+.blockin{
+  display: inline-block;
   width: 100%;
 }
 
