--- a/less/style.less
+++ b/less/style.less
@@ -86,9 +86,9 @@ ul{
 }
 .logo{
   display: inline-block;
-  margin-bottom: 8px;
-  margin-top: 70px;
-  width: 120px;
+  margin-top: 50px;
+  padding: 50px 0;
+  width: 230px;
   img{
     width: 100%;
   }
@@ -258,6 +258,7 @@ ul{
       overflow: hidden;
       position: relative;
       width: 33.33%;
+      padding: 2px;
       .gallery-item{
         background-position: center center;
         background-repeat: no-repeat;
@@ -322,8 +323,7 @@ ul{
   &:extend(.block);
   background: #000 none repeat scroll 0 0;
   color: #fff;
-  height: 250px;
-  padding: 60px 40px;
+  padding: 15px 40px;
   margin-bottom: 30px;
   h3{
     font-size: 41px;
@@ -340,7 +340,7 @@ ul{
 }
 
 .about{
-  background: #333333 none repeat scroll 0 0;
+  background:  #281a0d none repeat scroll 0 0;
   display: inline-block;
   margin-top: 30px;
   padding: 10px 40px;
